<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/backabout"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:contentDescription="@string/icon"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/v_1_0"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/abyssina_smart_and_creative_solution"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/dev_yohannes_kassa_yimam"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/email_yohanneskassa_yimam_gmail_com"
        android:textAppearance="?android:attr/textAppearanceMediumInverse" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/ethiopia_nazareth"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/all_right_received_2010_e_c"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <ImageView
        android:contentDescription="@string/icon"
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/textView5"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:gravity="center_horizontal"
        android:src="@drawable/ic_copyright_black_24dp" />
</RelativeLayout>