<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.s.c.s.abyssinia.batterymonitorv1.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:contentDescription="@string/batteryicon"
        android:id="@+id/batteryicon"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_battery_charging_full_black_24dp" />

    <TextView
        android:background="@drawable/startservice"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/batteryicon"
        android:layout_toRightOf="@+id/batteryicon"
        android:gravity="center|top"
        android:paddingTop="15dp"
        android:text="@string/battery_monitor_service"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btDetait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batteryicon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/battery_details"
        android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    <ScrollView
        android:background="@drawable/startservice"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btDetait">

        <TextView
            android:id="@+id/info"
            android:gravity="center|start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@android:color/white" />
    </ScrollView>


    <TextView

        android:id="@+id/persent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toEndOf="@+id/batteryicon"
        android:layout_toRightOf="@+id/batteryicon"
        android:gravity="center"
        android:text="@string/_000"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textSize="35sp" />


</RelativeLayout>
